--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Ruff (lint)
+      - name: Pre-commit (same checks as local)
         run: |
-          ruff check .
-
-      - name: Ruff (format check)
-        run: |
-          ruff format --check .
+          pre-commit run -a
 
       - name: Pytest
         run: |
           python -m pytest -q
-      
+
+      - name: Mypy
+        run: |
+          python -m mypy --config-file mypy.ini
