--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,25 +12,32 @@ repos:
       - id: check-added-large-files
         args: ["--maxkb=1024"]
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.6
-    hooks:
-      - id: ruff
-        args: ["--fix"]
-      - id: ruff-format
-
   - repo: local
     hooks:
+      - id: ruff
+        name: ruff (check + fix)
+        entry: python -m ruff check --fix .
+        language: system
+        pass_filenames: false
+        stages: [pre-commit]
+
+      - id: ruff-format
+        name: ruff format
+        entry: python -m ruff format .
+        language: system
+        pass_filenames: false
+        stages: [pre-commit]
+
+      - id: mypy
+        name: mypy
+        entry: python -m mypy --config-file=mypy.ini
+        language: system
+        pass_filenames: false
+        stages: [pre-push]
+
       - id: pytest
         name: pytest
         entry: python -m pytest -q
         language: system
         pass_filenames: false
         stages: [pre-push]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
-    hooks:
-      - id: mypy
-        args: [ "--config-file=mypy.ini" ]
-        stages: [ pre-push ]
