--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 APP_ENV=test
-DATABASE_URL=something_db
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/postgres
 JWT_SECRET=something_token
 JWT_ACCESS_TTL_MINUTES=30
